Removed sublabel in new thread, and made some javascript adjustements

--- a/Resources/views/Thread/storeJs.html.twig
+++ b/Resources/views/Thread/storeJs.html.twig
@@ -13,6 +13,8 @@
             'forum.already_subscribed': '{{ 'forum.already_subscribed' | trans }}',
             'forum.has_written': '{{ 'forum.has_written' | trans }}',
             'forum.add_subscription': '{{ 'forum.add_subscription' | trans }}',
+            'forum.status_subscribed': '{{ 'forum.status_subscribed' | trans }}',
+            'forum.status_not_subscribed': '{{ 'forum.status_not_subscribed' | trans }}',
             'forum.cancel_subscription': '{{ 'forum.cancel_subscription' | trans |capitalize }}',
             'message.subscription_cancelled': '{{ 'message.subscription_cancelled' | trans }}',
             'message.post_saved_draft': '{{ 'message.post_saved_draft' | trans }}',
